# rpi-pico

./: README.md
freertos_cpp/: CMakeLists.txt
freertos_cpp/inc/: task.hpp
freertos_cpp/src/: CMakeLists.txt  main.c  task.cpp
freertos_template/debug/: openocd.cfg
freertos_template/src/: CMakeLists.txt
simple_template/: .gdbinit  CMakeLists.txt
simple_template/inc/: template.h
simple_template/src/: CMakeLists.txt  main.c  template.c
